# Robotic-Grasping

./: README.md
Arduino/arm_servo/: arm_servo.ino  function_arm.ino  functions.ino  pyserial_arduino.ino
grasping/Models_and_dataset/: cv_rgb
grasping/Models_and_dataset/few_scripts/: change_path.py  demo1.py  demo2.py  demo_calib.py  demo_old.py  image_analyse.py  my_test.py  opencv_funda.py  pyserial_test.py  train.py  transformation.py  unpack.py
grasping/arm1_moveit_config/: CMakeLists.txt  package.xml
grasping/arm1_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robotic_arm.srdf  ros_controllers.yaml
grasping/arm1_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robotic_arm_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
grasping/arm_description/: CMakeLists.txt  package.xml
grasping/arm_description/launch/: rviz.launch
grasping/arm_description/urdf/: arm.urdf  arm1.urdf
grasping/grasp_ros/: CMakeLists.txt  package.xml
grasping/grasp_ros/launch/: start.launch  visualise_kinectdata.launch
grasping/grasp_ros/msg/: grasp.msg
grasping/grasp_ros/rviz/: visualise_kinectdata.rviz
grasping/grasp_ros/scripts/: depth_image.py  (+15 more)
(+3 files in other folders)
